--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "vue": "^2.5.16",
-    "vue-router": "^3.0.1"
+    "vue-froala-wysiwyg": "^2.8.4",
+    "vue-router": "^3.0.1",
+    "vue-wysiwyg": "^1.7.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-rc.10",
